[tool.poetry]
name = "pythonproject14"
version = "0.1.0"
description = ""
authors = ["sergrih1980-sys <sergrih1980@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.2"
flake8 = "^7.3.0"
isort = "^8.0.1"
requests = "^2.33.0"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
